# unillm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  DEVELOPMENT_PHASES.md  DEVELOPMENT_PLAN.md  Dockerfile  GPU_DRIVER_VERIFICATION.md  GPU_SETUP.md  Kraftfile  LICENSE  Makefile  OPTIMIZATION_STATUS.md  PHASE1_PROGRESS.md  README.md  build.py  build.sh  minimal_test.rs  nanos-config.json  simple_test.rs  specs.md  test_build.rs  test_llava.rs
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: main.rs  transfer_test.rs
crates/gpu-backend/: Cargo.toml
crates/gpu-backend/cuda/: Cargo.toml  build.rs
crates/gpu-backend/cuda/src/: context.rs  flash_attention.rs  gemm.rs  kernels.cu  lib.rs  memory.rs  stream.rs  transfer.rs
crates/gpu-backend/hip/: Cargo.toml  build.rs
crates/gpu-backend/hip/src/: context.rs  event.rs  flash_attention.rs  gemm.rs  kernels.hip  lib.rs  memory.rs  stream.rs  transfer.rs
crates/gpu-backend/src/: graphs.rs  lib.rs
crates/hal/: Cargo.toml
crates/hal/src/: iommu.rs  lib.rs  msix.rs  pci.rs
crates/hypervisor/: Cargo.toml
crates/hypervisor/src/: kvm.rs  lib.rs  memory.rs  vfio.rs
crates/inference/: Cargo.toml
crates/inference/src/: batch.rs  engine.rs  lib.rs  metrics.rs  request.rs  response.rs  types.rs
crates/kernels/: Cargo.toml  build.rs
crates/kernels/src/: auto_tuner.rs  cuda_driver.rs  hardware_detection.rs  hip_driver.rs  lib.rs  optimization_engine.rs  template_engine.rs  types.rs  unikernel_gpu.rs
crates/kernels/src/templates/: cache_aware_attention.json
crates/kv/: Cargo.toml
crates/kv/src/: gpu_integrated_cache.rs  gpu_memory.rs  hybrid_cache.rs  lib.rs  tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: advanced_features.rs  async_flash_attention.rs  async_kv_cache.rs  basic_model.rs  continuous_batching.rs  dashboard.rs  decode_loop.rs  distributed.rs  embedding_models.rs  enhanced_api_server.rs  enhanced_kv_cache.rs  flash_attention.rs  flash_attention_v2.rs  gguf_loader.rs  gpu_aware_batching.rs  gpu_model.rs  gpu_tensor_ops.rs  gpu_tensor_ops_v2.rs  huggingface_hub.rs  image_processing.rs  inference.rs  intelligent_distribution.rs  kv.rs  kv_cache.rs  lib.rs  llama.rs  memory_pool.rs  model_architectures.rs  model_core.rs  model_factory.rs  model_implementations.rs  model_loader.rs  model_registry.rs  models.rs  multi_gpu.rs  observability.rs  ollama.rs  openai_vision_api.rs  optimized_llama.rs  paged_attention.rs  (+26 more)
crates/runtime/src/benchmark/: llama_cpp_backend.rs  metrics.rs  mod.rs  runner.rs  unillm_backend.rs
crates/runtime/src/gpu/: common.rs  cuda.rs  intel.rs  metal.rs  mod.rs  rocm.rs
crates/runtime/src/models/: llama.rs  llava.rs  mod.rs  traits.rs
crates/runtime/src/models_v2/: arctic.rs  baichuan.rs  bert.rs  bloom.rs  chatglm.rs  clip.rs  codellama.rs  cogvlm.rs  dbrx.rs  deepseek.rs  deepseek_moe.rs  encodec.rs  falcon.rs  florence.rs  gemma.rs  gpt2.rs  gptj.rs  gptneox.rs  granite.rs  grok.rs  hubert.rs  idefics.rs  internlm.rs  internvl.rs  jamba.rs  llama.rs  llava.rs  mamba.rs  minicpm.rs  mistral.rs  mixtral.rs  mod.rs  mpt.rs  musicgen.rs  olmo.rs  opt.rs  phi.rs  phi3_vision.rs  qwen.rs  qwen2_vl.rs  (+8 more)
crates/runtime/src/optimizations/: chunked_prefill.rs  continuous_batching.rs  flash_attention.rs  kernel_fusion.rs  kv_cache_optimized.rs  memory_optimization.rs  mod.rs  speculative_decoding.rs
crates/runtime/src/simd/: mod.rs
crates/runtime/src/simd/arch/: avx2.rs  avx512.rs  mod.rs  neon.rs  scalar.rs
crates/runtime/src/simd/matmul/: gemm.rs  gemv.rs  mod.rs
crates/runtime/src/simd/ops/: mod.rs  rmsnorm.rs  rope.rs  swiglu.rs
crates/runtime/src/simd/quant/: block.rs  mod.rs  q4_0.rs  q4_k.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: adaptive_policy.rs  admission_control.rs  cache_analyzer.rs  chunked_prefill.rs  gpu_memory_tracker.rs  intelligent_scheduler.rs  lib.rs  stream_overlap.rs  types.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: benchmark.rs  lib.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: lib.rs
docs/: ARCHITECTURE.md  ROADMAP.md  api_reference.md  competitive_analysis.md  current_capabilities.md  deployment_guide.md  developer_guide.md  feature_gap_analysis.md  final_project_summary.md  gpu_support.md  honest_progress.md  implementation_roadmap.md  implementation_summary.md  openai_vision_api.md  performance_tuning.md  project_status.md  project_summary.md  sglang_analysis.md  todo_and_progress.md  troubleshooting.md  unikernel_architecture.md  unikernel_integration_complete.md  vllm_analysis.md
docs/benchmarks/: README.md
docs/implementation/: README.md  kernel_framework.md  memory_management.md  phase2_2_unified_engine.md  phase2_integration.md  scheduler_architecture.md  scheduling.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/api-reference/: index.md  inference.md  model-core.md  tensor-core.md  weight-loader.md
documentation/docs/architecture/: design-decisions.md  index.md  model-pattern.md  three-layers.md
documentation/docs/contributing/: adding-models.md  code-style.md  development.md  index.md
documentation/docs/getting-started/: first-model.md  index.md  installation.md
documentation/docs/models/: index.md
documentation/docs/models/audio/: wav2vec2.md  whisper.md
documentation/docs/models/llm/: gemma.md  llama.md  mistral.md  phi.md  qwen.md
documentation/docs/models/moe/: deepseek-moe.md  jamba.md  mixtral.md
documentation/docs/models/vision-language/: clip.md  llava.md  qwen2-vl.md
documentation/docs/user-guide/: configuration.md  generation.md  index.md  inference.md  loading-models.md
examples/: vision_api_demo.py
src/: benchmark.rs  client.rs  server.rs
