[workspace]
members = [
    "crates/kv",
    "crates/scheduler",
    "crates/inference",
    "crates/runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Modular LLM inference runtime written in Rust"
license = "Apache-2.0"
repository = "https://github.com/cognisoc/unillm"
keywords = ["llm", "inference", "rust", "machine-learning"]
categories = ["science", "concurrency"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true

# GPU-optimized release profile
[profile.gpu-optimized]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

