[package]
name = "unillm"
version = "0.1.0"
edition = "2021"

[dependencies]
hypervisor = { path = "../crates/hypervisor" }
hal = { path = "../crates/hal" }
gpu-backend-cuda = { path = "../crates/gpu-backend/cuda" }
gpu-backend-hip = { path = "../crates/gpu-backend/hip" }
gpu-backend = { path = "../crates/gpu-backend" }
# kernels = { path = "../crates/kernels" }  # Temporarily disabled
kv = { path = "../crates/kv" }
scheduler = { path = "../crates/scheduler" }
runtime = { path = "../crates/runtime" }
tokenizer = { path = "../crates/tokenizer" }
telemetry = { path = "../crates/telemetry" }