[package]
name = "unillm-inference"
version = "0.1.0"
edition = "2021"
description = "High-level inference engine for UniLLM"
license = "Apache-2.0"
repository = "https://github.com/cognisoc/unillm"
readme = "../../README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

kv = { package = "unillm-kv", path = "../kv", version = "0.1.0" }
scheduler = { package = "unillm-scheduler", path = "../scheduler", version = "0.1.0" }

futures = "0.3"
async-trait = "0.1"
tokio-metrics = "0.3"
bytemuck = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = []
benchmarking = []