[package]
name = "kernels"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Template engine
handlebars = "4.5"
tera = "1.19"

# GPU driver integration
libloading = "0.8"

# Low-level system access
libc = "0.2"
nix = "0.27"

# Performance monitoring
perf-event = "0.4"

# Machine learning for auto-tuning (temporarily disabled due to version conflicts)
# candle-core = "0.3"
# candle-nn = "0.3"
rand = "0.8"

[features]
default = ["cuda", "hip"]
cuda = []
hip = []
opencl = []

[build-dependencies]
bindgen = "0.69"
cc = "1.0"