[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
gpu = ["cuda", "metal"]

[dependencies]
# Basic model loading
safetensors = "0.6.2"
ndarray = "0.16.1"
ndarray-linalg = "0.16.0"

# GPU acceleration (features enabled when drivers available)
# Enable with: --features cuda,metal
candle-core = "0.8"
candle-nn = "0.8"

# Async traits
async-trait = "0.1"

# Math operations
num-traits = "0.2"
blas = "0.22"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP server and async runtime
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "timeout", "compression-gzip"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
futures-util = "0.3"

# WebSocket support
tokio-tungstenite = "0.24"
axum-extra = { version = "0.10", features = ["typed-header"] }

# HTTP client for testing and HuggingFace Hub integration
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
dirs = "5.0"

# Half-precision floating point support for quantization
half = "2.4"

# Distributed computing and random number generation
rand = "0.8"

# Date/time handling for model registry
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"

# Testing dependencies
axum-test = "15.0"

# High-performance observability (zero-overhead when disabled)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
once_cell = "1.19"

# Health checks and monitoring
sysinfo = "0.32"

# Byte manipulation for tensor loading
bytemuck = "1.18"

# Multimodal processing dependencies
image = { version = "0.25", features = ["png", "jpeg", "webp", "tiff"] }
imageproc = "0.25"
base64 = "0.22"
mime = "0.3"
bytes = "1.0"

# Re-add candle for tensor operations
candle-transformers = "0.8"

# Tokenization (HuggingFace tokenizers)
tokenizers = "0.20"
glob = "0.3"

# Note: Tensor operations now supported for multimodal processing

# Additional dependencies for production server
env_logger = "0.11"
governor = "0.6"
nonzero_ext = "0.3"

# Enhanced storage for multi-level caching
# Note: Using standard compression and serialization for now
# rykv would be a custom key-value store (not available on crates.io)
lz4 = "1.24"
bincode = "1.3"